feat(api): added patient api integration example

--- a/libs/feature-patient/src/lib/components/patient-list/patient-list.component.html
+++ b/libs/feature-patient/src/lib/components/patient-list/patient-list.component.html
@@ -1,1 +1,6 @@
-<p>patient-list works!</p>
+<p>Total {{ total }}</p>
+<div>
+  <div *ngFor="let patient of patients">
+    <p>{{ patient.description }}</p>
+  </div>
+</div>
